Update title and link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title></title>
+    <title>Please Contain Me: Practical LXC on the Desktop</title>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -27,8 +27,8 @@
       <div class="slides">
         <section id="qrcode" data-menu-title="QR code">
           <div class="qrcode" id="qrcode-talk"></div>
-          <p><a href="https://example.com/link/to/this/talk" target="_blank"
-                id="talk">https://example.com/link/to/this/talk</a></p>
+          <p><a href="https://fghaas.github.io/lca2018-lxc" target="_blank"
+                id="talk">https://fghaas.github.io/lca2018-lxc</a></p>
         </section>
         <section id="intro"
                  data-markdown="markdown/intro.md"
