Update QR code with Twitter link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="slides">
         <section id="qrcode" data-menu-title="QR code">
           <div class="qrcode" id="qrcode-talk"></div>
-          <p><a href="https://fghaas.github.io/lca2018-lxc" target="_blank"
+          <p><a href="https://goo.gl/7qBqaY" target="_blank"
                 id="talk">https://fghaas.github.io/lca2018-lxc</a></p>
         </section>
         <section id="intro"
