Include QR code at start and end

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section id="qrcode" data-menu-title="QR code">
-          <div class="qrcode" id="qrcode-talk"></div>
+        <section id="qrcode-start" data-menu-title="QR code (start)">
+          <div class="qrcode" id="qrcode-twitter"></div>
           <p><a href="https://goo.gl/7qBqaY" target="_blank"
-                id="talk">https://fghaas.github.io/lca2018-lxc</a></p>
+                id="twitter">https://fghaas.github.io/lca2018-lxc</a></p>
         </section>
         <section id="intro"
                  data-markdown="markdown/intro.md"
@@ -47,6 +47,11 @@
                  data-separator="^\n\n\n"
                  data-separator-vertical="^\n\n"
                  data-separator-notes="^Note:">
+        </section>
+        <section id="qrcode-end" data-menu-title="QR code (end)">
+          <div class="qrcode" id="qrcode-talk"></div>
+          <p><a href="https://github.com/fghaas/lca2018-lxc" target="_blank"
+                id="talk">https://github.com/fghaas/lca2018-lxc</a></p>
         </section>
       </div>
     </div>
