Fix QR code link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="slides">
         <section id="qrcode-start" data-menu-title="QR code (start)">
           <div class="qrcode" id="qrcode-twitter"></div>
-          <p><a href="https://goo.gl/7qBqaY" target="_blank"
+          <p><a href="https://goo.gl/rsNGhB" target="_blank"
                 id="twitter">https://fghaas.github.io/lca2018-lxc</a></p>
         </section>
         <section id="intro"
